--- a/src/pages/blog/post-1.mdx
+++ b/src/pages/blog/post-1.mdx
@@ -3,7 +3,11 @@ title: Hello, World
 layout: "../../layouts/BlogLayout.astro"
 ---
 
+import Link from "../../components/Link.astro"
+
 # Hi there!
+
+<Link href="/blog">BACCCCCCCCCCCCCK</Link>
 
 This Markdown file creates a page at `your-domain.com/page-1/`
 
