feat(mdx): Embed interactive React component in MDX
Demonstrates how to embed an interactive React component directly into an MDX page, showcasing the full power of the MDX and React integrations.

A stateful React component has been imported into an `.mdx` file and rendered using a `client:*` directive to make it interactive on the page. This pattern enables the creation of "islands of interactivity" within long-form content, allowing for rich, dynamic user experiences that seamlessly blend static prose with stateful applications.

--- a/src/pages/blog/post-1.mdx
+++ b/src/pages/blog/post-1.mdx
@@ -3,11 +3,13 @@ title: Hello, World
 layout: "../../layouts/BlogLayout.astro"
 ---
 
+import Button from "../../components/Button"
 import Link from "../../components/Link.astro"
 
 # Hi there!
 
 <Link href="/blog">BACCCCCCCCCCCCCK</Link>
+<Button client:load>A Button</Button>
 
 This Markdown file creates a page at `your-domain.com/page-1/`
 
