--- a/src/pages/blog/post-1.mdx
+++ b/src/pages/blog/post-1.mdx
@@ -3,13 +3,16 @@ title: Hello, World
 layout: "../../layouts/BlogLayout.astro"
 ---
 
+import Blockquote from "../../components/Blockquote.astro"
 import Button from "../../components/Button"
 import Link from "../../components/Link.astro"
+export const components = { blockquote: Blockquote }
 
 # Hi there!
 
 <Link href="/blog">BACCCCCCCCCCCCCK</Link>
 <Button client:load>A Button</Button>
+> blockquotes are awesome
 
 This Markdown file creates a page at `your-domain.com/page-1/`
 
